# goosechase-protobuf-bindings-rust

./: .gitmodules  Cargo.toml
native/: Cargo.toml  build.rs
native/src/: lib.rs
src/: lib.rs
